test/errors/type/collections/set/__lt.yasl
echo collections.set().__lt(collections.set(), true)
